--- a/css/util.css
+++ b/css/util.css
@@ -16,6 +16,10 @@ body, html {
 	color: #666666;
 
 	height: 100%;
+	width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 	background-color: #fff;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
